--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ format: html
 editor: visual
 ---
 
-```{r setup}
+```{r setup, include=F}
 knitr::opts_chunk$set(warning=F, error=F, message=F)
 ```
 
@@ -28,7 +28,6 @@ par(mfrow = c(2, 2))
 plot(lm)
 ```
 
-
 ## Performance Plots
 
 ### Default Performance Plot
@@ -36,6 +35,7 @@ plot(lm)
 ```{r new, out.width="100%", fig.height=8}
 performance::check_model(lm, theme = "see::theme_lucid")
 ```
+
 ### Theme Minimal
 
 ```{r theme-minimal, out.width="100%", fig.height=8}
@@ -67,8 +67,8 @@ To better understand the function, run `?performance::check_heteroskedasticity()
 
 ## Challenges
 
-The `themes` argument did not work, `colors` argument did.  
+The `themes` argument did not work, `colors` argument did.
 
 ## Acknowledgements
 
-Many thanks to Dr. Lyndon Walker for his tutorial on youtube.  His channel can be found [here](https://www.youtube.com/@DrLyndonWalker).
+Many thanks to Dr. Lyndon Walker for his tutorial on youtube. His channel can be found [here](https://www.youtube.com/@DrLyndonWalker).
